--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "con": "Data Source=.;Initial Catalog=BookStore;Integrated Security=True ;TrustServerCertificate=True"
+  }
 }
